--- a/src/main/resources/kee/application.properties
+++ b/src/main/resources/kee/application.properties
@@ -47,3 +47,5 @@ e2cef.ribbon.isolation.enabled=false
 
 e2cef.application.datadir=.
 logging.config=classpath:log4j2.xml
+
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
