--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
                 <env>milk</env>
             </properties>
         </profile>
+        <profile>
+            <id>derrick</id>
+            <properties>
+                <env>derrick</env>
+            </properties>
+        </profile>
         <!-- 本地环境 -->
         <profile>
             <id>local</id>
