--- a/src/main/resources/milk/application.properties
+++ b/src/main/resources/milk/application.properties
@@ -1,6 +1,6 @@
 ########################## 统一变量配置 ##########################
 ##### 数据库配置
-e2cef.datasource.ip=mini.com
+e2cef.datasource.ip=localhost
 e2cef.datasource.username=root
 e2cef.datasource.password=123456
 
