完善api 接口返回模型

--- a/src/main/resources/kee/application.properties
+++ b/src/main/resources/kee/application.properties
@@ -48,4 +48,4 @@ e2cef.ribbon.isolation.enabled=false
 e2cef.application.datadir=.
 logging.config=classpath:log4j2.xml
 
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr=mini.com:8848
